--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,10 +15,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="Container">
+    <div id="container">
       <div id="profile">
-        <img src="./assets/Avatar.png" alt="Foto de Kailan Gottardi" />
-        <p>@kailan_jr</p>
+        <img
+          src="./assets/avatar.png"
+          alt="Foto de Kailan Gottardi sorrindo, usando óculos e camisa preta."
+        />
+        <p>@kailanjr</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -30,43 +33,49 @@
         <li>
           <a href="#">Inscrever-se no NLW</a>
         </li>
+
         <li>
           <a href="#">Baixar meu e-book</a>
         </li>
+
         <li>
-          <a href="#">Ver meu portifólio</a>
+          <a href="">Ver meu portfólio</a>
         </li>
+
         <li>
-          <a href="#">Conheça o Explorer</a>
+          <a href="" target="_blank">Conheça o Explorer</a>
         </li>
       </ul>
       <div id="social-links">
         <a href="" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://www.instagram.com/kailan_jr/" target="_blank"
-          ><ion-icon name="logo-instagram"></ion-icon>
+
+        <a href="" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
         </a>
+
         <a href="" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
+
         <a href="" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
+
       <footer>
-        Feito com ♥ pela
-        <a href="https://www.rocketseat.com.br" target="_blank">Rocketseat</a>
+        Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a>
       </footer>
     </div>
 
     <script
       type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
     ></script>
     <script
       nomodule
-      src="https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
 
     <script src="./script.js"></script>
