--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="profile">
         <img
           src="./assets/avatar.png"
-          alt="Foto de Kailan Gottardi sorrindo, usando óculos e camisa preta."
+          alt="Foto de Kailan Gottardi sorrindo, usando óculos."
         />
         <p>@kailanjr</p>
       </div>
@@ -31,15 +31,17 @@
 
       <ul>
         <li>
-          <a href="#">Inscrever-se no NLW</a>
+          <a href="#" target="_blank">Inscrever-se no NLW</a>
         </li>
 
         <li>
-          <a href="#">Baixar meu e-book</a>
+          <a href="#" target="_blank">Baixar meu e-book</a>
         </li>
 
         <li>
-          <a href="">Ver meu portfólio</a>
+          <a href="https://github.com/KailanJr" target="_blank"
+            >Ver meu portifólio</a
+          >
         </li>
 
         <li>
@@ -47,25 +49,29 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="" target="_blank">
-          <ion-icon name="logo-github"></ion-icon>
+        <a href="https://twitter.com/JrKailan" target="_blank">
+          <ion-icon name="logo-twitter"></ion-icon>
         </a>
 
-        <a href="" target="_blank">
+        <a href="https://www.instagram.com/kailan_jr/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
+        <a href="https://github.com/KailanJr" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/kailan-gottardi-b33207236/"
+          target="_blank"
+        >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
 
       <footer>
-        Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a>
+        Feito com ♥ pela
+        <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
       </footer>
     </div>
 
