pequenas alteraçoes textos

--- a/index.html
+++ b/index.html
@@ -31,21 +31,24 @@
 
       <ul>
         <li>
-          <a href="#" target="_blank">Inscrever-se no NLW</a>
+          <a
+            href="https://www.linkedin.com/in/kailan-gottardi-b33207236/"
+            target="_blank"
+            >Ver meu Linkedin</a
+          >
         </li>
-
-        <li>
-          <a href="#" target="_blank">Baixar meu e-book</a>
-        </li>
-
         <li>
           <a href="https://github.com/KailanJr" target="_blank"
             >Ver meu portifólio</a
           >
         </li>
-
         <li>
-          <a href="" target="_blank">Conheça o Explorer</a>
+          <a href="#" target="_blank">Baixar meu e-book</a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/kailan_jr/" target="_blank"
+            >Conheça meu perfil</a
+          >
         </li>
       </ul>
       <div id="social-links">
@@ -61,11 +64,8 @@
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a
-          href="https://www.linkedin.com/in/kailan-gottardi-b33207236/"
-          target="_blank"
-        >
-          <ion-icon name="logo-linkedin"></ion-icon>
+        <a href="https://www.youtube.com/@d4rkfou502" target="_blank">
+          <ion-icon name="logo-youtube"></ion-icon>
         </a>
       </div>
 
