--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
           >
         </li>
         <li>
-          <a href="#" target="_blank">Baixar meu e-book</a>
-        </li>
-        <li>
           <a href="https://www.instagram.com/kailan_jr/" target="_blank"
             >Conheça meu perfil</a
           >
@@ -63,16 +60,12 @@
         <a href="https://github.com/KailanJr" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-
-        <a href="https://www.youtube.com/@d4rkfou502" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
       </div>
 
-      <footer>
+      <!--<footer>
         Feito com ♥ pela
         <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
-      </footer>
+      </footer>-->
     </div>
 
     <script
