--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevLinks</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/icone.png" />
   </head>
   <body>
     <div id="container">
@@ -62,10 +63,7 @@
         </a>
       </div>
 
-      <!--<footer>
-        Feito com ♥ pela
-        <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
-      </footer>-->
+      <footer>Cartão de visitas online</footer>
     </div>
 
     <script
