--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevLinks</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="assets/icone.png" />
+    <link rel="icon" href="../assets/icone.png" />
   </head>
   <body>
     <div id="container">
